--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon --exec ts-node src/index.ts",
-    "fi": "npx nodemon --exec ts-node src/fractional-index-test/index.ts"
+    "fi": "npx nodemon --exec ts-node src/fractional-index-test/index.ts",
+    "casl": "npx nodemon --exec ts-node src/casl/index.ts",
+    "cancan": "npx nodemon --exec ts-node src/cancan/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cancan": "^3.1.5",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
@@ -18,6 +21,7 @@
   },
   "dependencies": {
     "@casl/ability": "^6.7.1",
+    "cancan": "^3.1.0",
     "fractional-index": "^1.0.0"
   }
 }
