--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.4",
+    "vitest": "^1.4.0"
   },
   "dependencies": {
     "@casl/ability": "^6.7.1",
