--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,7 @@ tab_width = 2
 
 [{*.har,*.jsb2,*.jsb3,*.json,*.jsonc,*.postman_collection,*.postman_collection.json,*.postman_environment,*.postman_environment.json,.babelrc,.eslintrc,.prettierrc,.stylelintrc,bowerrc,jest.config}]
 indent_size = 2
+
+[{*.ts,*.tsx}]
+indent_size = 2
+indent_style = space
