--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@eslint/js": "^9.0.0",
     "@types/node": "^20.12.7",
     "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "nodemon": "^3.1.0",
+    "prettier": "3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4",
     "typescript-eslint": "^7.6.0",
