--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -30,6 +31,7 @@
     "@casl/ability": "^6.7.1",
     "cancan": "^3.1.0",
     "fractional-index": "^1.0.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.12.3"
   },
   "engines": {
